# C-GameEngine

./: .gitignore  .travis.yml  LICENSE  README.md  documentaion.md  documentation.md
CGameEngine/: CGameEngine.sln  CGameEngine.vcxproj  CGameEngine.vcxproj.filters  CMakeLists.txt  TodoList.md  pushWiki.ps1  xmldoc2md.xsl
CGameEngine/Builds/: Makefile
CGameEngine/Tests/: CMakeLists.txt  EngineTester.cpp  EngineTester.h  Main.cpp  (+2 more)
CGameEngine/src/: CMakeLists.txt  Main.cpp
CGameEngine/src/Engine/: Camera.cpp  Camera.h  Display.cpp  Display.h  Engine.cpp  Engine.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  SceneHandler.cpp  SceneHandler.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
CGameEngine/src/Engine/ComponentBased/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Transform.cpp  Transform.h
CGameEngine/src/Engine/Components/: Renderer.cpp  Renderer.h
CGameEngine/src/Engine/GUI/: FontHandler.cpp  FontHandler.h  GUIElement.h  GUIRenderer.cpp  GUIRenderer.h  Text.cpp  Text.h
CGameEngine/src/Engine/Util/: AutoUnbind.h  CmpStr.h  Constants.h  Curve.h  FileSystem.cpp  FileSystem.h  Math.cpp  Math.h  Rect.cpp  Rect.h  ScopeWatch.h  Util.cpp  Util.h  lodepng.cpp  lodepng.h  main.cpp
CGameEngine/src/Engine/Util/Curves/: ECurve.h  EMinusX.h
CGameEngine/src/Engine/Util/Debug/: DebugAction.cpp  DebugAction.h
CGameEngine/src/Engine/Util/Generators/: CylinderGenerator.cpp  CylinderGenerator.h  IcosphereGenerator.cpp  IcosphereGenerator.h  PerlinNoise.cpp  PerlinNosie.cpp  PerlinNosie.h
Presentations/: README.MD
(+25 files in other folders)
